--- a/package.json
+++ b/package.json
@@ -4,6 +4,16 @@
   "description": "My personal Prettier config",
   "main": "index.json",
   "author": "Dawid Stefaniak <contact@dawidstefaniak.com>",
-  "repository": "git@github.com:dawidstefaniak/prettier-config.git",
-  "license": "MIT"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dawidstefaniak/prettier-config.git"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/dawidstefaniak/prettier-config/issues"
+  },
+  "homepage": "https://github.com/dawidstefaniak/prettier-config#readme",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  }
 }
